config/default/localmodel_manager_image_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kserve-localmodel-controller-manager
  namespace: kserve
spec:
  template:
    spec:
      containers:
      # Change the value of image field below to your controller image URL
      - image: ghcr.io/kserve/kserve-localmodel-controller:latest
        name: manager
