config/default/localmodelnode_agent_image_patch.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kserve-localmodelnode-agent
  namespace: kserve
spec:
  template:
    spec:
      containers:
      # Change the value of image field below to your controller image URL
      - image: ghcr.io/kserve/kserve-localmodelnode-agent:latest
        name: manager
