config/default/localmodelnode_manager_image_patch.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kserve-localmodelnode-controller-manager
  namespace: kserve
spec:
  template:
    spec:
      containers:
      # Change the value of image field below to your controller image URL
      - image: kserve/kserve-localmodelnode-controller:latest
        name: manager
