config/default/manager_auth_proxy_patch.yaml
# This patch adds kube-rbac-proxy, which terminates HTTPS, performs Kubernetes
# authentication and authorization, and forwards plaintext HTTP to the manager.
# Do not enable --metrics-secure unless the proxy upstream and certificate trust
# are also configured for HTTPS.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kserve-controller-manager
  namespace: kserve
spec:
  template:
    spec:
      containers:
      - name: kube-rbac-proxy
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        image: quay.io/brancz/kube-rbac-proxy:v0.18.0
        args:
        - "--secure-listen-address=0.0.0.0:8443"
        - "--upstream=http://127.0.0.1:8080/"
        - "--logtostderr=true"
        - "--v=10"
        ports:
        - containerPort: 8443
          protocol: TCP
          name: https
      - name: manager
        args:
        # When changing args, also update manager.yaml because the following
        # list of args will fully override the arguments in manager.yaml.
        - "--metrics-addr=127.0.0.1:8080"
        - "--leader-elect"
