config/default/manager_image_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kserve-controller-manager
  namespace: kserve
spec:
  template:
    spec:
      containers:
      # Change the value of image field below to your controller image URL
      - image: kserve-controller
        name: manager
