config/default/manager_resources_patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kfserving-controller-manager
  namespace: kfserving-system
spec:
  template:
    spec:
      containers:
      - name: manager
        resources:
          limits:
            cpu: 100m
            memory: 300Mi
