config/default/llmisvc_svc_webhook_cainjection_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: llmisvc-webhook-server-service
  namespace: kserve
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: llmisvc-webhook-server-cert
