config/default/svc_webhook_cainjection_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: kserve-webhook-server-service
  namespace: kserve
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: kserve-webhook-server-cert
