config/default/inferencegraph_validatingwebhook_cainjection_patch.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: inferencegraph.serving.kserve.io
  annotations:
    cert-manager.io/inject-ca-from: $(kserveNamespace)/serving-cert
webhooks:
  - name: inferencegraph.kserve-webhook-server.validator
