config/default/isvc_mutatingwebhook_cainjection_patch.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: inferenceservice.serving.kserve.io
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
webhooks:
  - name: inferenceservice.kserve-webhook-server.defaulter
