config/default/llmisvc_validatingwebhook_cainjection_patch.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: llminferenceservice.serving.kserve.io
  annotations:
    cert-manager.io/inject-ca-from: $(kserveNamespace)/llmisvc-serving-cert
webhooks:
  - name: llminferenceservice.kserve-webhook-server.validator
