config/default/llmisvcconfig_validatingwebhook_cainjection_patch.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: llminferenceserviceconfig.serving.kserve.io
  annotations:
    cert-manager.io/inject-ca-from: $(kserveNamespace)/serving-cert
webhooks:
  - name: llminferenceserviceconfig.kserve-webhook-server.validator
