config/default/localmodelcache_validatingwebhook_cainjection_patch.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: localmodelcache.serving.kserve.io
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
webhooks:
  - name: localmodelcache.kserve-webhook-server.validator
