config/default/servingruntime_validationwebhook_cainjection_patch.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: servingruntime.serving.kserve.io
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
webhooks:
  - name: servingruntime.kserve-webhook-server.validator
