config/default/trainedmodel_mutatingwebhook_cainjection_patch.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: inferencegraph.serving.kserve.io
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
webhooks:
  - name: inferencegraph.kserve-webhook-server.validator
