config/default/trainedmodel_validatingwebhook_cainjection_patch.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: trainedmodel.serving.kserve.io
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
webhooks:
  - name: trainedmodel.kserve-webhook-server.validator
